Pulse 2 4.3
=============


Pulse 2 4.2
=============
* [FEATURE] Quick action to install ARS SSH key to Machines
* [FEATURE] Allow deployment of python scripts
* [FEATURE] Do not restart agent after an inventory
* [FEATURE] Auto-update scheduler plugins
* [FEATURE] Limit bandwidth usage during a deployment
* [FEATURE] Differentiate packages created in expert mode
* [FEATURE] Remove unused launcher service
* [FEATURE] Add the ability to display registry keys in the computers view
* [FEATURE] Download remote files from machines using XMPP
* [FEATURE] Allow to call a plugin from a quick action
* [BUGFIX] Standardize the size of dependencies boxes in package modification
* [BUGFIX] Fix the bug that deletes all packages if an empty package is created
* [BUGFIX] Fix download of files containing spaces
* [BUGFIX] Remove update module
* [BUGFIX] Fix user detection if no user logged in
* [BUGFIX] Update translations

Pulse 2 4.1
=============
* [FEATURE] New interface for building complex packages and workflows with dependencies
* [FEATURE] New history view that captures all operations
* [FEATURE] Pulse update module widget is now a standalone widget
* [FEATURE] Create and run custom quick actions
* [FEATURE] Ability to delay the execution step of deployments based on time, percentage or number of machines having received the package
* [FEATURE] Add support for UEFI in the DHCP server configuration for Pulse imaging
* [BUGFIX] Fix saving of sysprep answer files
* [BUGFIX] Fix the abortion of deployments
* [BUGFIX] Fix authentication to GLPI for user provisioning
* [BUGFIX] Fix multicast imaging in Debian Stretch

Pulse 2 4.0
=============
 * [FEATURE] Use xmpp to deliver messages, orders, etc
 * [FEATURE] Add glpi 9.1 Support
 * [FEATURE] Add a dashboard widget to follow backups
 * [FEATURE] Add a dashboard widget to know the number of machines (total,
 online, offline)
 * [BUGFIX]  Fix Antivirus detection with latest glpi
 * [BUGFIX]  Fix user creation with latest glpi