@@ -1,6 +1,10 @@
 Pulse 2 4.3
 =============
-
+* [FEATURE] Enable browsing and download of files from client machines
+* [FEATURE] Add new logs for dump in support script
+* [FEATURE] Allow registration of UEFI machines via PXE
+* [BUGFIX] Fix top action menu in action views
+* [BUGFIX] Use system user for new machines where no user has logged in yet
 
 Pulse 2 4.2
 =============
